# ChangeLog for dev-libs/qof
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/qof/ChangeLog,v 1.31 2011/01/07 08:47:48 fauli Exp $

  07 Jan 2011; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  Drop maintainership

  01 Nov 2010; Christian Faulhammer <fauli@gentoo.org> qof-0.7.5-r1.ebuild,
  qof-0.8.1.ebuild:
  Make SQLite optional by USE flag everywhere and depend on the proper SLOT
  of SQLite; disable GDBA backend everywhere for bug 343685

  01 Feb 2010; Christian Faulhammer <fauli@gentoo.org> -qof-0.7.5.ebuild:
  clean up

  30 Jan 2010; Raúl Porcel <armin76@gentoo.org> qof-0.7.5-r1.ebuild:
  sparc stable wrt #299604

  05 Jan 2010; <hwoarang@gentoo.org> qof-0.7.5-r1.ebuild:
  Stable on amd64 wrt bug #299604

  04 Jan 2010; Christian Faulhammer <fauli@gentoo.org> qof-0.7.5-r1.ebuild:
  stable x86, bug 299604

*qof-0.8.1 (04 Jan 2010)

  04 Jan 2010; Christian Faulhammer <fauli@gentoo.org> -qof-0.8.0.ebuild,
  +qof-0.8.1.ebuild:
  version bump

*qof-0.8.0 (09 Jun 2009)

  09 Jun 2009; Christian Faulhammer <fauli@gentoo.org> qof-0.7.5.ebuild,
  qof-0.7.5-r1.ebuild, +qof-0.8.0.ebuild,
  +files/qof-0.8.0-remove_spurious_CFLAGS.patch:
  version bump, ported to EAPI 2 and played around with econf switches. This
  is a new SLOT as API/ABI compatability is not guaranteed
  (app-office/gnotime fails with it anyway)

  28 Nov 2008; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  change my email address

*qof-0.7.5-r1 (07 Sep 2008)

  07 Sep 2008; Christian Faulhammer <opfer@gentoo.org> qof-0.7.5.ebuild,
  +qof-0.7.5-r1.ebuild:
  depend on slots of gnome-extra/libgda; new revision that depends on
  unstable slot 3

  17 Jun 2008; Christian Faulhammer <opfer@gentoo.org> qof-0.7.5.ebuild:
  change HOMEPAGE and add pkgconfig dependency, see bug 227557 reported by
  Patrick Lauer

  11 May 2008; Christian Faulhammer <opfer@gentoo.org> qof-0.7.5.ebuild: